NYCCHKBK-7724 - Fixed theming issue causing inner labels to have wrong padding, fixed selectors in both data feeds and advanced search & handled all cases

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -3658,14 +3658,16 @@ a.new-features-morelink{
     float: left;
     padding-right:4px;
 }
-#contracts-advanced-search .column .form-item label,
-.contracts-fieldset .datafield label {
+#contracts-advanced-search .column > .form-item > label:first-child,
+.contracts-fieldset .column > .datafield > .form-item > label:first-child,
+.contracts-fieldset .column > .datafield > label:first-child {
     padding-left: 15px;
     white-space: nowrap;
 }
 
-#contracts-advanced-search .column .asterisk-style label,
-.contracts-fieldset .asterisk-style label {
+#contracts-advanced-search .column .asterisk-style > label:first-child,
+.contracts-fieldset .column .asterisk-style > .form-item > label:first-child,
+.contracts-fieldset .column .asterisk-style > label:first-child {
     padding-left: 0px;
     white-space: nowrap;
 }
